# localflow-ide

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  RENAME_MIGRATION.md  findings.md  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.base.json  tsconfig.json  vercel.json  verification-report.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  llm.rs  main.rs
src-tauri/src/agent/: code.rs  mod.rs  planner.rs  review.rs  security.rs  test.rs
src-tauri/src/brain/: architecture_graph.rs  context.rs  dag.rs  dispatch.rs  execution_graph.rs  explainability.rs  failure_analysis.rs  goal.rs  matrix.rs  mod.rs  options.rs  questions.rs  recovery.rs  simulator.rs
src-tauri/src/core/: lifecycle.rs  mod.rs  supervisor.rs  task_queue.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/governor/: mod.rs  windows.rs
src-tauri/src/inspector/: health_engine.rs  mod.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/memory/: memory_graph.rs  mod.rs
src-tauri/src/model/: adaptive_orchestrator.rs  consensus.rs  mod.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/process/: mod.rs  runner.rs  terminal.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/sandbox/: capabilities.rs  mod.rs  policy.rs  sandbox_v2.rs  security_graph.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/storage/: mod.rs  task_history.rs
src-tauri/src/supervisor/: mod.rs
src-tauri/src/telemetry/: cost_engine.rs  logger.rs  (+3 more)
src-tauri/tests/: scheduler_test.rs
(+32 files in other folders)
