[package]
name = "localflow-ide"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Local-first AI development environment"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Core
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "sync", "rt", "time", "process"] }
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
tokio-stream = "0.1"
futures = "0.3"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Data
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# PTY terminal
portable-pty = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Filesystem
notify = { version = "6.1", optional = true }

# Validation
regex = "1.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify = "6.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
